  (Vincent Laviron, report by Github user Ngoguey42, review by Gabriel Scherer)

- #10298, #10305: Incorrect propagation of type equalities in functor
  application
  (Jacques Garrigue, report and review by Didier Remy)

- #10324, #10325: Prevent generation of Lsend(Cached, _) in bytecode
  (Vincent Laviron, report by Yawar Amin and Nicolás Ojeda Bär, review by
   Jacques Garrigue)

- #10351: Fix DLL loading with binutils 2.36+ on mingw-w64
  (David Allsopp, review by Nicolás Ojeda Bär)

OCaml 4.12.0 (24 February 2021)
-------------------------------

### Supported platforms (highlights):

- #9699: add support for iOS and macOS on ARM 64 bits
  (Eduardo Rafael, review by Xavier Leroy, Nicolás Ojeda Bär
   and Anil Madhavapeddy, additional testing by Michael Schmidt)

### Standard library (highlights):

- #9797: Add Sys.mkdir and Sys.rmdir.
  (David Allsopp, review by Nicolás Ojeda Bär, Sébastien Hinderer and
   Xavier Leroy)

* #9765: add init functions to Bigarray.
  (Jeremy Yallop, review by Gabriel Scherer, Nicolás Ojeda Bär, and
   Xavier Leroy)

* #9668: List.equal, List.compare
  (This could break code using "open List" by shadowing
   Stdlib.{equal,compare}.)
  (Gabriel Scherer, review by Nicolás Ojeda Bär, Daniel Bünzli and Alain Frisch)

- #9066: a new Either module with
  type 'a Either.t = Left of 'a | Right of 'b
  (Gabriel Scherer, review by Daniel Bünzli, Thomas Refis, Jeremy Yallop)

- #9066: List.partition_map :
    ('a -> ('b, 'c) Either.t) -> 'a list -> 'b list * 'c list
  (Gabriel Scherer, review by Jeremy Yallop)

- #9865: add Format.pp_print_seq
  (Raphaël Proust, review by Nicolás Ojeda Bär)

### Compiler user-interface and warnings (highlights):

- #9657: Warnings can now be referred to by their mnemonic name. The names are
  displayed using `-warn-help` and can be utilized anywhere where a warning list
  specification is expected.
      ocamlc -w +fragile-match
      ...[@@ocaml.warning "-fragile-match"]