@@ -1,0 +1,5 @@
+File "pr10338.ml", line 5, characters 21-64:
+5 | let f ?(s="hello") = function x when (print_string s; true) -> x
+                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+Warning 8 [partial-match]: this pattern-matching is not exhaustive.
+All clauses in this pattern-matching are guarded.
